<resources>
    <string name="app_name">Submission Aplikasi Story App  Kriteria</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="email_not_valid">Format email not valid!</string>
    <string name="password_not_valid">Password less than 6 characters!</string>
    <string name="password_not_same">Passwords are not the same!</string>
    <string name="name">Name</string>

    <string name="avatar">Avatar</string>
    <string name="Detail">Detail</string>
    <string name="username">Username :</string>
    <string name="description">Description :</string>
    <string name="no_value">-</string>
    <string name="gambar_avatar" />
    <string name="logout">Logout</string>
    <string name="maps">Maps</string>

    <string name="camera_x">CameraX</string>
    <string name="camera">Camera</string>
    <string name="gallery">Galery</string>
    <string name="upload">Upload</string>
    <string name="fill_description">Fill Description</string>
    <string name="floatingButton">TODO</string>
    <string name="refresh">Refresh Story Page</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Retry</string>
    <string name="no_connection">No Connection</string>
    <string name="refresh_maps_user">Refresh Maps user</string>
    <string name="image">image</string>
    <string name="refresh_add_story_page">Refresh Add Story Page</string>


</resources>