<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addstory.AddStoryUserActivity">


    <Button
        android:id="@+id/cameraXButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/previewImageView"
        android:layout_marginStart="101dp"
        android:layout_marginTop="26dp"
        android:layout_toEndOf="@id/galleryButton"
        android:elevation="2dp"
        android:scaleType="fitCenter"
        android:text="@string/camera_x"
        tools:layout_editor_absoluteX="288dp" />

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"


        app:srcCompat="@drawable/ic_place_holder" />

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/previewImageView"
        android:layout_marginStart="60dp"
        android:layout_marginTop="22dp"
        android:text="@string/gallery"

        />

    <EditText
        android:id="@+id/description"
        android:layout_width="276dp"
        android:layout_height="50dp"
        android:layout_below="@id/cameraXButton"
        android:layout_marginStart="67dp"

        android:layout_marginTop="47dp"
        android:layout_marginEnd="68dp"

        android:hint="@string/fill_description"
        android:lines="20" />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/upload" />


</RelativeLayout>